@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.4
 
+	- Changed behaviour of fluid to always paste into
+	  a selected group (STR #88)
 	- Menuitem now changes font, even if fontsize
 	  is not set (STR #110)
 	- Swapped shortcut labels in OS X (STR #86)
